# yaml-schema-cpp

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  license_header_2022.txt  license_header_2023.txt  license_header_2024.txt  license_manager.sh
.github/workflows/: clang_format.yml  format_built_test.yml
cmake/: Config.cmake.in  NoBoostConfig.cmake.in  cmake_uninstall.cmake.in
examples/: cost-example.cpp  stage-example.cpp
examples/include/yaml-schema-example/: converter.hpp  costs.hpp  path.hpp  stage.hpp
examples/src/: costs.cpp  stage.cpp
examples/yaml/: cost-state-input.yaml  stage-input.yaml
examples/yaml-schemas/costs/: base.yaml  cost.yaml  state.yaml
examples/yaml-schemas/stages/: base.yaml  stage_schema.yaml
include/yaml-schema-cpp/: expression.hpp  filesystem_wrapper.hpp  folders_schema.hpp  type_check.h  type_check.hpp  yaml-schema-cpp.hpp  yaml_conversion.h  yaml_conversion.hpp  yaml_generator.hpp  yaml_schema.h  yaml_schema.hpp  yaml_server.h  yaml_server.hpp  yaml_utils.h  yaml_utils.hpp
include/yaml-schema-cpp/exprtk/: .clang-format  exprtk.hpp
internal/: config.h.in
src/: expression.cpp  folders_schema.cpp  type_check.cpp  yaml-schema-cpp.cpp  yaml_generator.cpp  yaml_schema.cpp  yaml_server.cpp  yaml_template_generator.cpp  yaml_utils.cpp
test/: CMakeLists.txt  gtest_add_node.cpp  gtest_add_node_schema.cpp  gtest_add_node_yaml.cpp  gtest_apply_schema.cpp  gtest_check_type.cpp  gtest_conversions.cpp  gtest_duplicated_keys.cpp  gtest_example.cpp  gtest_expression.cpp  gtest_find_nodes_with_key.cpp  gtest_flatten.cpp  gtest_generator.cpp  gtest_own_type.cpp  gtest_relative_path.cpp  gtest_schema.cpp  gtest_type_derived.cpp  gtest_yaml_utils.cpp
test/gtest/: CMakeLists.txt  utils_gtest.h
test/schema/complex_case/: MapBase.schema  MotionProvider.schema  None.schema  Problem.schema  Problem3d.schema  ProcessorBase.schema  ProcessorBaseWithSensor.schema  ProcessorMotion.schema  ProcessorOdom3d.schema  SensorBase.schema  SensorOdom3d.schema  StateO3d.schema  StateP3d.schema  StateSensorO3d.schema  StateSensorP3d.schema  StateV3d.schema  TreeManagerBase.schema  TypeAndPlugin.schema
test/schema/flatten/: flatten_merge.schema  flatten_merge_gt.schema  flatten_override.schema  flatten_override_gt.schema  flatten_recursive.schema  flatten_recursive_gt.schema  flatten_relative_path.schema  flatten_relative_path_gt.schema  flatten_sequence_follow.schema  flatten_sequence_follow_gt.schema
test/schema/folder_schema/: base_input.schema  base_input_base.schema  base_input_derived.schema  expression.schema  nontrivial_options_default_value.schema  not_default.schema  optional_map.schema  same_param_diff_type.schema  simple_type.schema  test1.schema
test/schema/type_derived/: sequence_derived.schema  type_derived_derived.schema  type_derived_final.schema
test/wrong_schema/: not_base.schema  not_doc.schema  not_mandatory.schema  not_type.schema  wrong_default.schema  wrong_default_options.schema  wrong_doc.schema  wrong_expression.schema  wrong_expression2.schema  wrong_expression3.schema  wrong_mandatory.schema  wrong_options.schema  wrong_options2.schema  wrong_value.schema  wrong_value_options.schema
test/yaml/: base_input.yaml  base_input_left.yaml  base_input_wrong1.yaml  base_input_wrong10.yaml  base_input_wrong2.yaml  base_input_wrong3.yaml  base_input_wrong4.yaml  base_input_wrong5.yaml  base_input_wrong6.yaml  base_input_wrong7.yaml  base_input_wrong8.yaml  base_input_wrong9.yaml  complex_case.yaml  complex_case_sensor.yaml  duplicated_input.yaml  empty_vectorXd.yaml  expression_input1.yaml  expression_input2.yaml  expression_input_wrong1.yaml  expression_input_wrong2.yaml  flatten_independent.yaml  flatten_recursive.yaml  flatten_test.yaml  nontrivial_options_default_value.yaml  relative_path_other_folder.yaml  relative_path_same_folder.yaml  simple_type_default.yaml  test_find_nodes_with_key.yaml
test/yaml/flatten/: flatten_merge.yaml  flatten_merge_gt.yaml  flatten_override.yaml  flatten_override_gt.yaml  flatten_recursive.yaml  flatten_recursive_gt.yaml  flatten_relative_path.yaml  flatten_relative_path_gt.yaml  flatten_sequence_follow.yaml  flatten_sequence_follow_gt.yaml
test/yaml/other_schema/: test2.schema
test/yaml/own_type/: sequence_mandatory.yaml  single_mandatory.yaml
test/yaml/schema/: base_input.schema  base_input_base.schema  base_input_derived.schema  not_default.schema  not_mandatory.schema  not_type.schema  same_param.schema  same_param_diff_type.schema  test1.schema  wrong_default.schema  wrong_doc.schema  wrong_mandatory.schema  wrong_options2.schema  wrong_yaml_type.schema
test/yaml/schema/own_type/: sequence_mandatory.schema  single_mandatory.schema
test/yaml/schema/type_derived/: type_derived_base.schema  type_derived_final.schema
test/yaml/type_derived/: sequence_derived.yaml  sequence_derived_wrong1.yaml  sequence_derived_wrong2.yaml  sequence_derived_wrong3.yaml  sequence_derived_wrong4.yaml  type_derived.yaml  type_derived_wrong1.yaml  type_derived_wrong2.yaml  type_derived_wrong3.yaml  type_derived_wrong4.yaml
test/yaml/wrong_schema/: not_base.schema  not_doc.schema  not_mandatory.schema  not_type.schema  wrong_default.schema  wrong_default_options.schema  wrong_doc.schema  wrong_mandatory.schema  wrong_options.schema  wrong_options2.schema  wrong_yaml_type.schema
